<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" >

<LinearLayout
 
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
   android:padding="8dip"
            >

    
   <!--  title -->
  <TextView android:id="@+id/scene_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25dip"
            android:textStyle="bold"
            android:paddingTop="8dip"
            android:layout_marginBottom="20dip"

            android:textColor="#dc6800"/>

	<!-- scene pic and desc -->
  <ImageView android:id="@+id/scene_pic"
      		 android:paddingTop="10dip"
      		android:layout_width="200dip"
      		android:layout_height="200dip"
      		android:layout_marginBottom="20dip"
      		/>
  
  
    <TextView android:id="@+id/scene_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            
             
            />
    
    
   <!--  front marker and text -->
       <TextView android:id="@+id/marker_desc_front"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/front_marker_string"
            
             
            />    
            
    <ImageView android:id="@+id/marker_pic_front"
      		 android:paddingTop="10dip"
      		android:layout_width="100dip"
      		android:layout_height="100dip"
      		android:layout_marginBottom="20dip"
      		/>

    
    
   <!--  back marker and text -->
       <TextView android:id="@+id/marker_desc_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/back_marker_string"
             
            />  
            
     <ImageView android:id="@+id/marker_pic_back"
   		 android:paddingTop="10dip"
   		android:layout_width="100dip"
   		android:layout_height="100dip"
   		android:layout_marginBottom="20dip"
   		/>

    
    
     <!--  right marker and text -->
     
         <TextView android:id="@+id/marker_desc_right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/right_marker_string"
             
            />
    
      <ImageView android:id="@+id/marker_pic_right"
   		 android:paddingTop="10dip"
   		android:layout_width="100dip"
   		android:layout_height="100dip"
   		android:layout_marginBottom="20dip"
   		/>

    
    
    
       <!--  left marker and text -->
             <TextView android:id="@+id/marker_desc_left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/left_marker_string"
             
            />    
      <ImageView android:id="@+id/marker_pic_left"
   		 android:paddingTop="10dip"
   		android:layout_width="100dip"
   		android:layout_height="100dip"
   		android:layout_marginBottom="20dip"
   		/>

    <Button
		
		android:id="@+id/scene_button"
		android:layout_marginTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	</Button>
    
        <Button
		android:text="@string/launch_button"
		android:id="@+id/launch_button"
		android:layout_marginTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
	</Button>

</LinearLayout>
</ScrollView>